--- a/Task_1_1_3/build.gradle
+++ b/Task_1_1_3/build.gradle
@@ -24,3 +24,6 @@ jacocoTestReport {
         xml.required = true
     }
 }
+
+sourceCompatibility = JavaVersion.VERSION_19
+targetCompatibility = JavaVersion.VERSION_19
