--- a/Task_1_1_3/build.gradle
+++ b/Task_1_1_3/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'jacoco'
 }
-
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17) // Specify desired Java version
@@ -20,7 +19,8 @@ repositories {
 dependencies {
 }
 
-group = 'ru.nsu.shebanov'
+
+group = 'ru.nsu.shebanov.equations'
 version = '1.0-SNAPSHOT'
 
 repositories {
