--- a/Task_1_3_1/build.gradle
+++ b/Task_1_3_1/build.gradle
@@ -5,6 +5,9 @@ plugins {
 
 group = 'ru.nsu.shebanov'
 version = '1.0-SNAPSHOT'
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 
 repositories {
     mavenCentral()
@@ -14,6 +17,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
+
+
 
 test {
     useJUnitPlatform()
