--- a/Task_1_3_1/gradle/wrapper/gradle-wrapper.properties
+++ b/Task_1_3_1/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
+#Tue Nov 12 09:54:37 NOVT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.8-bin.zip
-networkTimeout=10000
-validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
