--- a/Task_1_3_1/.gitignore
+++ b/Task_1_3_1/.gitignore
@@ -144,3 +144,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
+
+./testFile.txt
